--- a/Day3/peak_picking.Rmd
+++ b/Day3/peak_picking.Rmd
@@ -73,8 +73,8 @@ A full description of the parameters of the algorithm can be found in the [`xcms
 In `xcms` the parameters of the algorithm are stored into a specific object:
 
 ```{r}
-mf <- MatchedFilterParam(binSize = 0.1,   ## in Daltons m/z
-                         fwhm = 6,        ## in seconds
+mf <- MatchedFilterParam(binSize = 0.1, 
+                         fwhm = 6, 
                          snthresh = 5) 
 mf
 ```
