--- a/Day3/rt_corr_feat_def.Rmd
+++ b/Day3/rt_corr_feat_def.Rmd
@@ -278,11 +278,9 @@ This can be also split by sample class:
 ```{r}
 sample_vs_qc <- ifelse(raw_data$variety == "QC","QC","S")
 
-pp <- featureSummary(raw_data, group = sample_vs_qc, skipFilled = FALSE) %>% 
+featureSummary(raw_data, group = sample_vs_qc, skipFilled = FALSE) %>% 
   as_tibble() %>% 
   arrange(desc(QC_rsd))
-
-pp
 ```
 
 This useful to filter features with higher variability in the QC (more than in the samples).
